--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="icon.jpg" sizes="32x32">
 
-    <title>CSA Florianópolis - Sitio Saraquá</title>
+    <title>CSA Florianópolis - Sítio Saraquá</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="p-lg-5 my-5 w-100 text-center">
                 <h1 class="display-4">CSA Florianópolis</h1>
-                <h1 class="display-4 font-weight-normal">Sitio Saraquá</h1>
+                <h1 class="display-4 font-weight-normal">Sítio Saraquá</h1>
             </div>
         </div>
     </div>
@@ -127,7 +127,7 @@
                 <div class="card-header" id="headingThree1">
                     <h5 class="m-0">
                     <a class="collapsed" data-toggle="collapse" data-target="#collapseThree1" aria-expanded="false" aria-controls="collapseThree1">
-                        4. Posso escolher o que vem na cota?
+                        3. Posso escolher o que vem na cota?
                     </a>
                     </h5>
                 </div>
