--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="position-relative overflow-hidden text-center bg-light" id="header">
         <div class="container">
-            <div class="p-lg-5 my-5 w-100 text-center">
+            <div class="p-lg-5 my-5 w-100 text-center" id="logo">
                 <h1 class="display-4">CSA Florianópolis</h1>
                 <h1 class="display-4 font-weight-normal">Sítio Saraquá</h1>
             </div>
