--- a/index.html
+++ b/index.html
@@ -29,21 +29,9 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h2>CSA?</h2>
-                    <p><b>C</b>omunidade que <b>S</b>ustenta a <b>A</b>gricultura é um movimento mundial de empoderamento cívico, através do cotidiano e essencial vínculo com a terra: nossa alimentação.</p>
-                    <p>Esse modelo foi elaborado com o propósito de aproximar as pessoas da agricultura e dos agricultores, gerando um sistema de confiança e cooperação, que estimula uma cultura de apreço; ao invés de uma cultura de preços. Para tanto, grupos de consumidores passam a serem sócios de uma fazenda de produção de alimentos e a partilhar diretamente os processos e produtos da atividade rural.</p>
-                    <a class="btn btn-outline-secondary just-mobile" href="http://www.csabrasil.org/csa/" target="_blank">Saiba mais</a>
-                </div>
-                <div class="col not-mobile">
-                    <p class="pt-5">Essa organização se caracteriza e se consolida por princípios, como:</p>
-                    <ul>
-                        <li>Cooperação, em contraponto à dinâmica de competição do mercado;</li>
-                        <li>Confiança e transparência entre as partes envolvidas;</li>
-                        <li>Abastecimento direto do sítio, reduzindo custos intermediários e evitando desperdícios;</li>
-                        <li>Respeito à sazonalidade da produção, favorecendo a nutrição;</li>
-                        <li>Economia associativa;</li>
-                        <li>Convivência fraterna;</li>
-                    </ul>
+                    <h2>CSA e Sítio Saraquá</h2>
+                    <p class="mt-4"><b>C</b>omunidade que <b>S</b>ustenta a <b>A</b>gricultura - é um movimento mundial que tem por objetivo criar relações mais próximas entre consumidores e agricultores. É um conceito que preza por sustentabilidade, relações justas de comércio, respeito pelo alimento e pela natureza, dentre tantos outros benefícios que um modelo de agricultura familiar proporciona.</p>
+                    <p>O casal de agricultores Vitor e Tânea são os responsáveis pelo <a href="https://saraqua.com.br/" target="_blank">Sítio Saraquá</a>. Eles produzem alimentos orgânicos certificados, além de seguirem e promoverem os princípios da agroecologia. Vitor e Tânea fundaram a CSA Sítio Saraquá: a primeira CSA no estado de Santa Catarina e que atualmente conta com mais de 60 integrantes!</p>
                     <a class="btn btn-outline-secondary" href="http://www.csabrasil.org/csa/" target="_blank">Saiba mais</a>
                 </div>
             </div>
@@ -52,130 +40,129 @@
 
     <div class="d-md-flex flex-md-equal w-100 p-5 bg-dark text-white">
         <div class="container">
-            <h2>Sítio Saraquá</h2>
-            <p>Somos Tânea e Vitor. Vivemos num sítio emprestado no município de Angelina, graças à concessão da família, que nos confiou a responsabilidade de cuidar deste espaço. <b>Obrigado família!</b></p>
-            <p>Estamos estruturados como agricultores familiares, tirando nosso sustento exclusivamente da terra, trabalhando em parceria com outros produtores ecológicos da Rede Ecovida e com o apoio dos parceiros da cidade que precisam comer bem! <b>Obrigado “organólatras”!</b></p>
-            <p>Contamos também com o apoio dos nossos companheiros gatos, cachorros, galinhas, tucanos, bugios, verduras, árvores, montanhas, rios, enfim, impossível citar tantos companheiros. <b>Obrigado por fazerem parte de nossas vidas!</b></p>
-
-            <div class="video-container">
-                <iframe class="w-100 video" src="https://www.youtube.com/embed/4ZwrjO9cRq8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-
-            <a class="btn btn-outline-secondary mt-5 just-mobile-w-100" href="https://saraqua.com.br/" target="_blank">Conheça</a>
+            <h2>Nossos princípios</h2>
+            <ul class="mt-4">
+                <li>Cooperação, em contraponto à dinâmica de competição do mercado;</li>
+                <li>Confiança e transparência entre as partes envolvidas;</li>
+                <li>Respeito à sazonalidade da produção, favorecendo a nutrição e o meio ambiente;</li>
+                <li>Economia circular e associativa;</li>
+                <li>Abastecimento direto do sítio, reduzindo custos intermediários e evitando desperdícios;</li>
+                <li>Convívio fraterno.</li>
+            </ul>
         </div>
     </div>
 
     <div class="d-md-flex flex-md-equal w-100 p-5">
         <div class="container">
-            <h2>Como funciona?</h2>
-            <p><i>O vídeo acima resume muito bem o funcionamento do CSA Floripa do Sitío Saraquá, não deixe de assistir.</i></p>
-            <p class="how-works">
-                - Nossas partilhas acontecem todas as <b>terças-feiras</b>.<br />
-                - Temos ponto de partilha no <b>Centro</b>, <b>Itacorubi</b> e <b>Campeche</b>. Você pode escolher o mais próximo a você.<br />
-                - Você opta por quantas cotas de vegetais deseja. Hoje uma cota está estimada no valor de R$ 100 mensal (esse valor pode variar para mais ou para menos dependendo da quantidade de coagricultores que temos).<br />
-                <ul>
-                    <li>Cada cota tem entre 4 a 5 variedades</li>
-                    <li>Temos duas opções diferentes, ou seja, possibilidade de 8 a 10 variedades semanais</li>
-                </ul>
-                - Como adicional também temos:<br />
-                <ul>
-                    <li>Cotas de ovos no valor de R$ 39 mensal (inclui 6 ovos orgânicos por semana).</li>
-                    <li>Cotas de pães no valor de R$ 59 mensal (inclui 1 pão orgânico de aprox. 420g por semana).</li>
-                    <li>Possibilidade de compra de produtos orgânicos como arroz, farinhas, grãos, geléias, mel, melados, vegetais congelados, temperos e muitos outros, onde você paga de acordo com o que consumiu no fechamento do mês seguinte.</li>
-                </ul>
-                - Temos os valores de R$ 25 de transporte e R$ 10 de fundo de reserva. Esses valores são independentes da quantidade de cotas e cobrados mensalmente por coagricultor(a)
-            </p>
-            <p>Entre em contato conosco e venha fazer parte: <a href="https://api.whatsapp.com/send?phone=5548998675149" target="_blank">(48) 998675149</a>. Ou fale com o sítio em <a href="https://api.whatsapp.com/send?phone=554896606112" target="_blank">(48) 996606112</a>.</p>
+            <h2>Como funciona nossa CSA?</h2>
+            <div class="video-container mt-4">
+                <iframe class="w-100 video" src="https://www.youtube.com/embed/4ZwrjO9cRq8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <p class="mt-4">Ao se associar os integrantes adquirem o privilégio de participar diretamente das atividades do sítio, seja através de visitas programadas, seja pelo recebimento dos alimentos orgânicos ali produzidos.</p>
+            <p>Os alimentos são distribuídos todas as <b>terças-feiras pela manhã</b>, nos pontos de partilha do <b>Centro, Itacorubi e Campeche</b>. Escolha o mais próximo de você!</p>
+            <p>Você opta por quais e quantas cotas de alimentos produzidos deseja receber:</p>
+            <ul><li><b>Cota de vegetais</b> – Cada cota inclui 4 a 5 variedades semanais (R$ 100 mensal – variável de acordo com o número de integrantes)</p></li>
+                <li><b>Cotas de ovos</b> – cada cota inclui meia dúzia de ovos por semana (R$ 39 mensal).</p></li>
+                <li><b>Cotas de pães</b> – cada cota inclui 1 pão de aprox. 420g por semana (R$ 59 mensal).</p></li>
+                <li><b>Produtos de mercearia</b> – cereais, farinhas , geléias, mel, conservas, sucos, congelados, temperos e muitos outros (essa tabela de valores é divulgada semanalmente aos integrantes)</p></li></ul>
+            <p>Adicionalmente incluem-se, por associado, as taxas de R$ 25 do transporte e R$ 10 do fundo de reserva.</p>
+            <p>Trabalhamos apenas com alimentos orgânicos e temos certificação dos nossos produtos.</p>
+            <p class="mt-5">Fale conosco para fazer parte da comunidade ou tirar dúvidas: <a href="https://api.whatsapp.com/send?phone=5548998675149" target="_blank">(48) 998675149</a>.<br />
+            Fale com o Sítio Saraquá: <a href="https://api.whatsapp.com/send?phone=554896606112" target="_blank">(48) 996606112</a>.</p>
         </div>
     </div>
 
     <div class="d-md-flex flex-md-equal w-100 p-5 bg-dark text-white">
         <div class="container">
             <h2 class="mb-3">Perguntas frequentes</h2>
-            
+
+
             <div class="card">
-                <div class="card-header" id="headingOne">
+                <div class="card-header" id="heading1">
                     <h5 class="m-0">
-                    <a class="collapsed" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                        1. O que contém em uma cota?
+                    <a class="collapsed" data-toggle="collapse" data-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
+                        1. Qual meu papel como integrante?
                     </a>
                     </h5>
                 </div>
-                <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                <div id="collapse1" class="collapse" aria-labelledby="heading1" data-parent="#accordion">
                     <div class="card-body">
-                        Uma cota é composta de 4 a 5 variedades de legumes, frutas, verduras, grãos, folhas e/ou PANCs.
+                        Os integrantes decidem de forma democrática o que será plantado no sítio sempre antes de agosto de cada ano, que é quando se dá o início do ano agrícola. Também opinam sobre os rumos da comunidade, quais investimentos podem ser realizados no sítio e participam ativamente da promoção do grupo para atrair novos integrantes. Além disso, são responsáveis por pequenas tarefas para uma boa manutenção do grupo: tesouraria, coordenação, contato com interessados, partilheiros… Os voluntários para estas tarefas são bonificados com alimentos do sítio, custeados por toda a comunidade.
                     </div>
                 </div>
             </div>
             <div class="card">
-                <div class="card-header" id="headingTwo">
+                <div class="card-header" id="heading2">
                     <h5 class="m-0">
-                    <a class="collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        2. Qual a diferença entre a cota 1 e a cota 2?
+                    <a class="collapsed" data-toggle="collapse" data-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
+                        2. Porque o valor da cota pode variar?
                     </a>
                     </h5>
                 </div>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                <div id="collapse2" class="collapse" aria-labelledby="heading2" data-parent="#accordion">
                     <div class="card-body">
-                        Temos 2 opções de cotas para maior diversidade. Indicamos a Cota 1 para quem mora sozinho(a) ou cozinha pouco em casa. E Cota 1 + 2 para famílias com 2 ou mais membros.<br />
+                        O sítio possui um custo mensal para manutenção da produção e assim como os produtos, este custo é <b>rateado</b> entre todos os integrantes. Portanto, a mensalidade pode sofrer pequenas variações de acordo com adesões e saídas da comunidade.
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header" id="heading3">
+                    <h5 class="m-0">
+                    <a class="collapsed" data-toggle="collapse" data-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
+                        3. Posso escolher o que vem na cota?
+                    </a>
+                    </h5>
+                </div>
+                <div id="collapse3" class="collapse" aria-labelledby="heading3" data-parent="#accordion">
+                    <div class="card-body">
+                        Você não precisa se preocupar com isso, pois a cota é selecionada pelo sítio e vem de acordo com a sazonalidade do que foi produzido, garantindo uma dieta mais diversa, nutritiva e conectada com as ofertas da natureza.
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header" id="heading4">
+                    <h5 class="m-0">
+                    <a class="collapsed" data-toggle="collapse" data-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
+                        4. O que contém em uma cota de vegetais?
+                    </a>
+                    </h5>
+                </div>
+                <div id="collapse4" class="collapse" aria-labelledby="heading4" data-parent="#accordion">
+                    <div class="card-body">
+                        Cada cota de alimentos é composta por pelo menos 4 variedades de orgânicos que costumam seguir este padrão: 1 fruta, 1 folhosa, 1 legumes e 1 raiz ou tempero.<br />
+                        Esta configuração pode mudar de acordo com a época do ano, pois a comunidade respeita a sazonalidade e ciclos de cada alimento.<br />
+                        O que não muda: tem sempre ao menos uma porção de frutas e tem sempre no mínimo 4 variedades de alimentos por cota. Mas é bastante comum virem mais do que 4 variedades de itens por cota - em algumas épocas, uma cota chega a ter até 7 variedades!
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header" id="heading5">
+                    <h5 class="m-0">
+                    <a class="collapsed" data-toggle="collapse" data-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
+                        5. Qual a diferença entre a cota 1 e a cota 2?
+                    </a>
+                    </h5>
+                </div>
+                <div id="collapse5" class="collapse" aria-labelledby="heading5" data-parent="#accordion">
+                    <div class="card-body">
+                        Os integrantes escolhem quantas cotas de alimentos desejam receber semanalmente. Os que optam por uma cota, recebem ao menos 4 itens diferentes. Quem escolhe receber duas cotas, tem ao menos 8 variedades de itens semanais. Para opções de três ou mais cotas não se amplia mais a variedade de itens, somente a quantidade.<br />
                         <img src="cota1.jpg" class="part mt-3" />
                         <img src="cota2.jpg" class="part mt-3" />
                     </div>
                 </div>
             </div>
-            <div class="card">
-                <div class="card-header" id="headingThree1">
-                    <h5 class="m-0">
-                    <a class="collapsed" data-toggle="collapse" data-target="#collapseThree1" aria-expanded="false" aria-controls="collapseThree1">
-                        3. Posso escolher o que vem na cota?
-                    </a>
-                    </h5>
-                </div>
-                <div id="collapseThree1" class="collapse" aria-labelledby="headingThree1" data-parent="#accordion">
-                    <div class="card-body">
-                        Não, a cota vem de acordo com a sazonalidade do que foi produzido no sítio.
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header" id="headingThree">
-                    <h5 class="m-0">
-                    <a class="collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        4. Porque o valor pode variar?
-                    </a>
-                    </h5>
-                </div>
-                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                    <div class="card-body">
-                        O sítio possui um custo total mensal para continuar sua produção e assim como os produtos, o custo também é RATEADO entre todos os co-agricultores.<br />
-                        Portanto, a mensalidade pode sofrer pequenas variações de acordo com adesões e saídas da comunidade.
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header" id="headingFour">
-                    <h5 class="m-0">
-                    <a class="collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                        5. Qual meu papel como coagricultor(a)?
-                    </a>
-                    </h5>
-                </div>
-                <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
-                    <div class="card-body">
-                        Depende de você! Temos muitas funções que podem ser realizadas para o nosso funcionamento e bem comum, desde funções financeiras, captação de novos coagricultores, auxilio na partilha até participação de atividades no sítio (fora da situação de pandemia). <br />
-                        Você participa o quanto quer e pode, mas é importante lembrar que somos uma comunidade com um príncipio de cooperação!
-                    </div>
-                </div>
-            </div>
             
-            <p class="mt-3"><i>Caso tenha alguma outra dúvida, não hesite em entrar em contato conosco.</i></p>
+            <p class="mt-3"><i>Fale conosco para fazer parte da comunidade ou tirar dúvidas: <a href="https://api.whatsapp.com/send?phone=5548998675149" target="_blank">(48) 998675149</a>.<br />
+            Fale com o Sítio Saraquá: <a href="https://api.whatsapp.com/send?phone=554896606112" target="_blank">(48) 996606112</a>.</i></p>
         </div>
     </div>
 
     <footer class="container py-5">
         <div class="row">
             <div class="col-12 col-md">
-                <img src="icon.jpg">
+                <img src="csa.png" class="stamp csa">
+                <img src="SitioSaraqua.png" class="stamp saraqua">
+                <img src="organico.png" class="stamp organico">
                 <small class="d-block mb-3 text-muted">© 2016-2021</small>
             </div>
             <div class="col-6 col-md">
