Change images and add whatsapp icon in links

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 <li><b>Produtos de mercearia</b> – cereais, farinhas , geléias, mel, conservas, sucos, congelados, temperos e muitos outros (essa tabela de valores é divulgada semanalmente aos integrantes)</p></li></ul>
             <p>Adicionalmente incluem-se, por associado, as taxas de R$ 25 do transporte e R$ 10 do fundo de reserva.</p>
             <p>Trabalhamos apenas com alimentos orgânicos e temos certificação dos nossos produtos.</p>
-            <p class="mt-5">Fale conosco para fazer parte da comunidade ou tirar dúvidas: <a href="https://api.whatsapp.com/send?phone=5548998675149" target="_blank">(48) 998675149</a>.<br />
-            Fale com o Sítio Saraquá: <a href="https://api.whatsapp.com/send?phone=554896606112" target="_blank">(48) 996606112</a>.</p>
+            <p class="mt-5">Fale conosco para fazer parte da comunidade ou tirar dúvidas: <a href="https://api.whatsapp.com/send?phone=5548998675149" target="_blank">(48) 998675149 <span class="fa fa-whatsapp"></span></a>.<br />
+            Fale com o Sítio Saraquá: <a href="https://api.whatsapp.com/send?phone=554896606112" target="_blank">(48) 996606112 <span class="fa fa-whatsapp"></span></a>.</p>
         </div>
     </div>
 
@@ -152,8 +152,8 @@
                 </div>
             </div>
             
-            <p class="mt-3"><i>Fale conosco para fazer parte da comunidade ou tirar dúvidas: <a href="https://api.whatsapp.com/send?phone=5548998675149" target="_blank">(48) 998675149</a>.<br />
-            Fale com o Sítio Saraquá: <a href="https://api.whatsapp.com/send?phone=554896606112" target="_blank">(48) 996606112</a>.</i></p>
+            <p class="mt-3"><i>Fale conosco para fazer parte da comunidade ou tirar dúvidas: <a href="https://api.whatsapp.com/send?phone=5548998675149" target="_blank">(48) 998675149 <span class="fa fa-whatsapp"></span></a>.<br />
+            Fale com o Sítio Saraquá: <a href="https://api.whatsapp.com/send?phone=554896606112" target="_blank">(48) 996606112 <span class="fa fa-whatsapp"></span></a>.</i></p>
         </div>
     </div>
 
