--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
             <p class="mt-4">Ao se associar os integrantes adquirem o privilégio de participar diretamente das atividades do sítio, seja através de visitas programadas, seja pelo recebimento dos alimentos orgânicos ali produzidos.</p>
             <p>Os alimentos são distribuídos todas as <b>terças-feiras pela manhã</b>, nos pontos de partilha do <b>Centro, Itacorubi e Campeche</b>. Escolha o mais próximo de você!</p>
             <p>Você opta por quais e quantas cotas de alimentos produzidos deseja receber:</p>
-            <ul><li><b>Cota de vegetais</b> – Cada cota inclui 4 a 5 variedades semanais (R$ 100 mensal – variável de acordo com o número de integrantes)</p></li>
-                <li><b>Cotas de ovos</b> – cada cota inclui meia dúzia de ovos por semana (R$ 39 mensal).</p></li>
-                <li><b>Cotas de pães</b> – cada cota inclui 1 pão de aprox. 420g por semana (R$ 59 mensal).</p></li>
-                <li><b>Produtos de mercearia</b> – cereais, farinhas , geléias, mel, conservas, sucos, congelados, temperos e muitos outros (essa tabela de valores é divulgada semanalmente aos integrantes)</p></li></ul>
-            <p>Adicionalmente incluem-se, por associado, as taxas de R$ 25 do transporte e R$ 10 do fundo de reserva.</p>
+            <ul><li><b>Cota de vegetais</b> – Cada cota inclui no mínimo 4 variedades semanais (R$ 94 mensal)</p></li>
+                <li><b>Cotas de ovos</b> – Cada cota inclui meia dúzia de ovos por semana (R$ 44 mensal).</p></li>
+                <li><b>Cotas de pães</b> – Cada cota inclui 1 pão de aprox. 420g por semana (R$ 69 mensal).</p></li>
+                <li><b>Produtos de mercearia</b> – cereais, farinhas , geléias, mel, conservas, sucos, congelados, temperos e muitos outros (encomenda pontual via catálogo)</p></li></ul>
+            <p>Adicionalmente incluem-se, por associado, as taxas de R$ 30 do transporte e R$ 12 do fundo de reserva.</p>
             <p>Trabalhamos apenas com alimentos orgânicos e temos certificação dos nossos produtos.</p>
             <p class="mt-5">Fale conosco para fazer parte da comunidade ou tirar dúvidas: <a href="https://api.whatsapp.com/send?phone=554899980186" target="_blank">(48) 99980186 <span class="fa fa-whatsapp"></span></a>.<br />
             Fale com o Sítio Saraquá: <a href="https://api.whatsapp.com/send?phone=554896606112" target="_blank">(48) 996606112 <span class="fa fa-whatsapp"></span></a>.</p>
